--- a/src/Para.Client.Web/Views/Data/Index.cshtml
+++ b/src/Para.Client.Web/Views/Data/Index.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="/Publics/img/favicon.ico" />
-    <title>Para / SetCrm / Argeset</title>
+    <title>Para Servisi / SetCrm / Argeset</title>
     <style type="text/css">
         html, body, header, strong {
             margin: 0;
@@ -62,7 +62,7 @@
         <br />
         Desteklenen para birimleri:
         <br />
-        <strong>TL, USD, EUR, GBP</strong>
+        <strong>TL, USD, EUR, GBP, JPY</strong>
     </p>
 <pre>
 <a href="/data/deger" target="_blank">GET</a> /Deger?kaynak=TL&hedef=USD&tur=efektif&gun=20150205
