--- a/src/Para.Client.Web/Views/Data/Index.cshtml
+++ b/src/Para.Client.Web/Views/Data/Index.cshtml
@@ -62,17 +62,17 @@
         <br />
         Desteklenen para birimleri:
         <br />
-        <strong>TL, USD, EUR, GBP, JPY</strong>
+        <strong>TRY, USD, EUR, GBP, JPY</strong>
     </p>
 <pre>
-<a href="/data/deger" target="_blank">GET</a> /Deger?kaynak=TL&hedef=USD&tur=efektif&gun=20150205
+<a href="/data/deger" target="_blank">GET</a> /Deger?kaynak=TRY&hedef=USD&tur=efektif&gun=20150205
 <br />
-<a href="/data/cevrim" target="_blank">GET</a> /Cevrim?kaynak=TL&hedef=USD&tur=efektif&gun=20150205&tutar=100
+<a href="/data/cevrim" target="_blank">GET</a> /Cevrim?kaynak=TRY&hedef=USD&tur=efektif&gun=20150205&tutar=100
 <br />
 </pre>
 
 <pre style="text-align: left;width:172px;">
-&kaynak= (TL)
+&kaynak= (TRY)
 &hedef= (USD)
 &tur= (efektif || forex)
 &gun= (20150205)
